--- a/kubernetes-configmap-reload/Jenkinsfile
+++ b/kubernetes-configmap-reload/Jenkinsfile
@@ -36,24 +36,24 @@ pipeline {
         		}
     		}
 	    }
-	 //    stage("Docker Build and Push") {
-	 //        when {
-		// 		expression { params.action == 'create' }
-		// 	}
-	 //        steps {
-	 //            dir("${params.AppName}") {
-	 //                dockerBuild ( "${params.ImageName}", "${params.docker_repo}" )
-	 //            }
-	 //        }
-	 //    }
-	 //    stage("Docker CleanUP") {
-	 //        when {
-		// 		expression { params.action == 'create' }
-		// 	}
-	 //        steps {
-	 //            dockerCleanup ( "${params.ImageName}", "${params.docker_repo}" )
-		// 	}
-		// }
+	    stage("Docker Build and Push") {
+	        when {
+				expression { params.action == 'create' }
+			}
+	        steps {
+	            dir("${params.AppName}") {
+	                dockerBuild ( "${params.ImageName}", "${params.docker_repo}" )
+	            }
+	        }
+	    }
+	    stage("Docker CleanUP") {
+	        when {
+				expression { params.action == 'create' }
+			}
+	        steps {
+	            dockerCleanup ( "${params.ImageName}", "${params.docker_repo}" )
+			}
+		}
 			    stage("Ansible Setup") {
 	        when {
 				expression { params.action == 'create' }
